Expanded Cheat Menu: ### Changed: - Examine: - > Added some more info to attaches.
### Fixed:
- Colonist>Set Gender wasn't working.
- Mission>Instant Colony Approval didn't remove the founder msg.
- Some of the infopanel cheats were hidden.

Minimap v0.5:
Added an Image checkbox (does the same as the MCR option).
It'll work without MCR, but it won't save the setting.

ExpandedCheatMenu@choggi.org

--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -274,7 +274,7 @@ https://www.lua.org/manual/5.3/manual.html#pdf-debug.sethook",
 302535920000692,Log is blank (well not anymore).,
 302535920000477,Clear out the windowed console log.,
 302535920001069,Show Positions,
-302535920001076,Shows the hex position of the spot: (-1,5).,
+302535920001076,Shows the hex position of the spot: (-1,2).,
 302535920000524,Print Func,
 302535920000745,Print Func Params,
 302535920000900,Print Reset,
@@ -992,9 +992,9 @@ Not permanent.",
 302535920001459,Shows list of material settings/.dds files for use with .mtl files.,
 302535920001421,Shows a list of particles you can use on the selected obj.,
 302535920001417,Follow Mouse Grid Size,
-302535920001418,Sets the size of the grid...,
+302535920001418,Sets the size of the Building/Flight grid.,
 302535920001419,Follow Mouse Grid Trans,
-302535920001420,How transparent the grid is.,
+302535920001420,How transparent the Building grid is.,
 302535920001359,"Just lists them for now, I'll make it force them soonish.",
 302535920001416,Force,
 302535920001358,Group,
@@ -1096,9 +1096,7 @@ Use Editor Mode and mouse drag to select multiple objects for deletion.",
 Attention: If you get yellow ground areas; just load it again or try %s.",
 302535920000495,Particles Reload,
 302535920000496,"Reloads particles from ""Data/Particles""...",
-302535920000497,Toggle Terrain Deposit Grid,
-302535920000498,Shows a grid around concrete.,
-302535920000499,Toggle Grid Follow Mouse,
+302535920000499,Toggle Building Grid,
 302535920000500,"Show a hex grid around mouse:
 Green = pass/build, Yellow = no pass/build,
 Blue = pass/no build, Red = no pass/no build.",
