--- a/Mods ChoGGi/Mars Companion/todo.txt
+++ b/Mods ChoGGi/Mars Companion/todo.txt
@@ -11,3 +11,8 @@ randomly picks up drones and "plays"? with them
 
 
 maybe add a selection panel saying if it's bored or not?
+
+or give it a storage area, and let it become a little hoarder, the possibilites are so much fun
+turning these cute little companions into little three yo, would cause plenty of relatively harmless mayhem. I would add a feature that turns switches on your power cables and pipes on or off at random.. or turning down Triboelectric scrubbers, those kind of things. or even just whizzing around a building to make it extra dusty randomly would be fun as well.
+
+turn off for a few seconds then back on
