Expanded Cheat Menu:
- info panel Attempt to use an undefined global

ExpandedCheatMenu@choggi.org

--- a/Mods ChoGGi/Mars Companion/todo.txt
+++ b/Mods ChoGGi/Mars Companion/todo.txt
@@ -14,5 +14,12 @@ maybe add a selection panel saying if it's bored or not?
 
 or give it a storage area, and let it become a little hoarder, the possibilites are so much fun
 turning these cute little companions into little three yo, would cause plenty of relatively harmless mayhem. I would add a feature that turns switches on your power cables and pipes on or off at random.. or turning down Triboelectric scrubbers, those kind of things. or even just whizzing around a building to make it extra dusty randomly would be fun as well.
-
 turn off for a few seconds then back on
+
+would be so cool if your companion had its own house prebuilt on the map randomly,
+and it steals supplies from wherever whenever. omg, that would drive me nutty if I was in early game and needed that last electronic to maintain a building. would be such fun to find the hideout later on though. and see how much he has managed to steal.
+I can just imagine it stealing the founders food as it arrives. lol. but, maybe if you can catch it stealing it just drops the loot??
+click on it to make it drop the res
+
+
+Or, oh, ya, maybe if it has a countdown, and if you don't click on it every so often, it goes off to find something bratty to do? that makes it much more interactive as well?? So then if you haven't been paying attention to it, it turns bratty, but if you have then it spawns a rare metal, or prized resource as a reward for being nice to it??
