Expanded Cheat Menu: - Merged a couple funcs and removed the * from view text in examine.
### Fixed:
- Examine:
- > The search box will now search the entire line instead of chunks of it.
- > Toggle Attach Spots didn't always add the polyline to chains.

### Removed:
Fixes>All Pipe Skins To Default: It wasn't the best code, and I'm pretty sure they fixed the bug with chrome pipes?

Lib:
- Pretty large code cleanup, but that should be it for awhile.

ExpandedCheatMenu@choggi.org

--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -185,7 +185,6 @@ s = SelectedObj, c() = GetTerrainCursor(), restart() = quit(""restart"")",
 302535920001053,Fill up %s with fuel.,
 302535920000005,Drops a new colonist in selected dome.,
 302535920001246,Changes colour of %s back to default.,
-302535920000885,Permanently delete %s,
 302535920001199,Double the amount of colonist slots for this building.,
 302535920001200,Reset the capacity of colonist slots for this building.,
 302535920001202,Fill all stat bars.,
@@ -273,7 +272,9 @@ https://www.lua.org/manual/5.3/manual.html#pdf-debug.sethook",
 302535920000870,Shows mod log msgs in an examine dialog.,
 302535920000692,Log is blank (well not anymore).,
 302535920000477,Clear out the windowed console log.,
-302535920001069,Show Positions,
+302535920000461,Position Info,
+302535920000463,Add spot pos to the name.,
+302535920001069,Position,
 302535920001076,Shows the hex position of the spot: (-1,2).,
 302535920000524,Print Func,
 302535920000745,Print Func Params,
@@ -361,7 +362,7 @@ Press once to clear this examine, again to clear all.",
 302535920000520,Parents,
 302535920000525,Ancestors,
 302535920000553,Examine parent and ancestor objects.,
-302535920000414,Are you sure you wish to delete it?,
+302535920000414,Are you sure you wish to delete %s?,
 302535920000228,Assign to,
 302535920000043,"Press <color 0 200 0>Enter</color> to scroll to next found text, <color 0 200 0>Ctrl-Enter</color> to scroll to previous found text, <color 0 200 0>Arrow Keys</color> to scroll to each end.",
 302535920000044,Go To Text,
@@ -1240,8 +1241,8 @@ Fix with: %s",
 302535920000954,You need to select a building that has workers.,
 302535920000956,for colonist capacity: Above a thousand is laggy (above 60K may crash).,
 302535920000957,%s capacity is now %s.,
-302535920000958,You need to select a building that has capacity.,
-302535920000959,You need to select something that has space for visitors.,
+302535920000958,You need to select a building that has capacity (colonists/air/water/elec).,
+302535920000959,You need to select something that has space for visitors (services/trainingbuildings).,
 302535920000960,%s visitor capacity is now %s.,
 302535920000961,Visitor Capacity,
 302535920000962,"Max capacity limited to:
@@ -1296,9 +1297,6 @@ This may break the save in other ways, best to just use it for testing.",
 302535920001268,"RC Transports on a route have a certain tendency to get stuck and bog the game down (high speed feels like normal speed).
 
 This'll check for and stop any borked ones (it'll show a popup msg when it stops one).",
-302535920000461,All Pipe Skins To Default,
-302535920000463,"Large Water Tank + Pipes + Chrome skin = borked looking connections.
-This resets all pipes to the default skin.",
 302535920000249,"Colonists will leave a diner/etc and stop outside of it and not move anymore (might be related to one of those smarter worker ai mods).
 
 Seems to fix it after a Sol or two, so you shouldn't need to leave this running.",
