Expanded Cheat Menu: - Added titles to a bunch of examine dialogs for random funcs.
### Added:
- Console>Tools>Examine Errors: Open (some) errors in an examine dialog (shows stack trace and sometimes a thread).
- > Not really useful without my HelperMod, or if you want to use "Errors In Console" without the log showing.
- ChoGGi.ComFuncs.TestLocaleFile(filepath): Needs my HelperMod to work.
- > See the bottom of my Locales tutorial for more info.

### Fixed:
- Examine:
- > View Text: Broke scrolling when I removed the * from the text.

ExpandedCheatMenu@choggi.org

--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -78,6 +78,7 @@ ID,Text,Translation,Old Translation,Gender
 302535920000033,Post a request on Nexus or Github or send an email to: <color 100 255 100>%s</color>,
 302535920001092,Pins,
 302535920000004,Dump,
+302535920000854,Results Found,
 302535920000109,Invalid Image,
 302535920001543,Set collisions on <color 100 255 100>%s</color>. Collisions disabled: <color 255 255 100>%s</color>,
 302535920001541,Start a Crime Event,
@@ -236,6 +237,9 @@ If this isn't a dumping site then waste rock will not be emptied.",
 302535920001301,Edit Text,
 302535920000721,Overwrite,
 302535920000827,Check this to overwrite file instead of appending to it.,
+302535920001102,Examine Errors,
+302535920001104,Open (some) errors in an examine dialog (shows stack trace and sometimes a thread).,
+302535920001077,Error from function,
 302535920000234,Monitor Func Calls,
 302535920000300,"Collects a list of func calls from ""@AppData/Mods/""
 Usage: Call it once to start and again to stop, it'll then show a list of func calls.
@@ -252,7 +256,7 @@ https://www.lua.org/manual/5.3/manual.html#pdf-debug.sethook",
 302535920001377,Update this list when ECM updates it.,
 302535920001378,XWindow Inspector,
 302535920001379,Opens up the window inspector with terminal.desktop.,
-302535920001287,Instead of a single line, you can enter/execute code in a textbox.,
+302535920001287,"Instead of a single line, you can enter/execute code in a textbox.",
 302535920000473,Reload ECM Menu,
 302535920000474,Fiddling around in the editor mode can break the menu / shortcuts added by ECM (use this to fix or alt-tab).,
 302535920001308,Settings,
@@ -274,10 +278,11 @@ https://www.lua.org/manual/5.3/manual.html#pdf-debug.sethook",
 302535920000870,Shows mod log msgs in an examine dialog.,
 302535920000692,Log is blank (well not anymore).,
 302535920000477,Clear out the windowed console log.,
+302535920000885,Unpacked,
 302535920000461,Position Info,
 302535920000463,Add spot pos to the name.,
 302535920001069,Position,
-302535920001076,Shows the hex position of the spot: (-1,2).,
+302535920001076,"Shows the hex position of the spot: (-1,2).",
 302535920000524,Print Func,
 302535920000745,Print Func Params,
 302535920000900,Print Reset,
@@ -1545,7 +1550,7 @@ Move ModContent.hpk to Mod folder/Pack/ModContent.hpk",
 
 <color 255 150 150>This report will go to the %s developers not me.</color>",
 302535920001463,Bug Report,
-302535920001464,Yes, I know what I'm doing. This is a bug.,
+302535920001464,"Yes, I know what I'm doing. This is a bug.",
 302535920001427,Pack,
 302535920001428,"Uploads as a packed mod (default for mod editor upload).
 This will always apply if uploading to paradox.",
