Expanded Cheat Menu:
- Examine:
- > Added entity name to objs with one.
- > Cleaned up Set Particles: No more dupes, and should hpoefully be better at turning them off
- > Attach Spots Toggle now shows the pos offset from origin, instead of world pos.

Martian Carwash v0.6:
It needs water now, just 1 though.
Added a warning msg to it when a dust storm is active.

ExpandedCheatMenu@choggi.org

--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -278,10 +278,9 @@ https://www.lua.org/manual/5.3/manual.html#pdf-debug.sethook",
 302535920000870,Shows mod log msgs in an examine dialog.,
 302535920000692,Log is blank (well not anymore).,
 302535920000477,Clear out the windowed console log.,
+302535920000461,Position,
 302535920000885,Unpacked,
-302535920000461,Position Info,
-302535920000463,Add spot pos to the name.,
-302535920001069,Position,
+302535920000463,Add spot offset pos from Origin.,
 302535920001076,"Shows the hex position of the spot: (-1,2).",
 302535920000524,Print Func,
 302535920000745,Print Func Params,
@@ -1032,7 +1031,6 @@ Not permanent.",
 302535920001222,Age,
 302535920001229,Last Meal,
 302535920001235,Last Rest,
-302535920001237,Position,
 302535920001163,"Flatten height has been choosen <color 100 255 100>%s</color>, press shortcut again to update buildable.",
 302535920001164,"Flattening has been stopped, now updating buildable.",
 302535920000851,"isn't an object?
