--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -1,5 +1,4 @@
 ID,Text,Translation,Old Translation,Gender
-302535920001123,Test Locale,
 302535920001400,ChoGGi,
 302535920000887,ECM,
 302535920000000,Expanded Cheat Menu,
@@ -87,6 +86,7 @@ ID,Text,Translation,Old Translation,Gender
 302535920001518,Double-click <left_click> title to rollup into the title bar.,
 302535920000001,"F2 to toggle Cheats Menu (Ctrl-F2 for Cheats Pane), and F9 to clear console log text.
 If this isn't a new install, then see Menu>Help>ECM>Changelog and search for ""To import your old settings"".",
+302535920001123,Test Locale,
 302535920001069,Toggle Boolean,
 302535920000497,Hook Started,
 302535920000498,Hook Stopped,
@@ -288,7 +288,7 @@ https://www.lua.org/manual/5.3/manual.html#pdf-debug.sethook",
 302535920000745,Print Func Params,
 302535920000900,Print Reset,
 302535920000906,Print func name when this func is called.,
-302535920000984,Also prints params.,
+302535920000984,Also prints params (if this func is attached to a class obj then the first arg will only return the name).,
 302535920001067,Remove print from func.,
 302535920001551,Surfaces Toggle,
 302535920001552,Show a list of surfaces and draw lines over them (GetRelativeSurfaces).,
