Expanded Cheat Menu:
- Fixed scroll bar in Console Window not scrolling to the bottom.

ExpandedCheatMenu@choggi.org

--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -237,6 +237,7 @@ If this isn't a dumping site then waste rock will not be emptied.",
 302535920001301,Edit Text,
 302535920000721,Overwrite,
 302535920000827,Check this to overwrite file instead of appending to it.,
+302535920001123,Shows any mod msgs in the log.,
 302535920001102,Examine Errors,
 302535920001104,Open (some) errors in an examine dialog (shows stack trace and sometimes a thread).,
 302535920001077,Error from function,
@@ -987,7 +988,7 @@ Works after colonist idle.",
 Not permanent.",
 302535920000447,Change the age at which colonists die (applies to newly arrived and born colonists as well).,
 302535920000448,"I'm afraid it could be 9/11 times 1,000.",
-302535920001136,Test a CSV for malformed strings (causes freezing when loaded normally).,
+302535920001136,Test a CSV for malformed strings (can cause freezing when loaded normally).,
 302535920001137,CSV Path,
 302535920001155,"Enter the path to the CSV file you want to test (defaults to mine as an example).
 You can edit the CSV then run this again without having to restart the game.
