Expanded Cheat Menu:
### Added:
- Game>Terrain Texture Remap: Instead of replacing all textures with one then re-adding stuff, this will remap existing textures.
- Debug>Used Terrain Textures: Show a list of terrain textures used in current map.

### Changed:
- Renamed Change Terrain Type to Terrain Texture Change.
- Shift-F4/Ctrl-F4 doesn't return attachments to objects in list.
- Examine:
- > Added a "Generate .mtl" link to Object>Materials Properties (it doesn't have all the prop names yet).

### Fixed:
- Terrain Texture Change was hiding waste sites.

ExpandedCheatMenu@choggi.org

--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -1,7 +1,12 @@
 ID,Text,Translation,Old Translation,Gender
+302535920001512,Mark All Objects (Line),
+302535920001513,Add a line connecting all items in list.,
 302535920001400,ChoGGi,
 302535920000887,ECM,
 302535920000000,Expanded Cheat Menu,
+302535920000741,Race,
+302535920001448,CSV,
+302535920001181,Used Terrain Textures,
 302535920001125,Test Locale File,
 302535920000239,Tools,
 302535920000201,Active,
@@ -79,6 +84,17 @@ ID,Text,Translation,Old Translation,Gender
 302535920000033,Post a request on Nexus or Github or send an email to: <color 100 255 100>%s</color>,
 302535920001092,Pins,
 302535920000004,Dump,
+302535920001503,Map Name,
+302535920001505,°,
+302535920001504,Named,
+302535920001222,Age,
+302535920001229,Last Meal,
+302535920001235,Last Rest,
+302535920001457,Stored,
+302535920001454,Stockpiled,
+302535920001455,Produced,
+302535920001456,Consumed,
+302535920001453,Completed,
 302535920000854,Results Found,
 302535920000109,Invalid Image,
 302535920001543,Set collisions on <color 100 255 100>%s</color>. Collisions disabled: <color 255 255 100>%s</color>,
@@ -87,6 +103,20 @@ ID,Text,Translation,Old Translation,Gender
 302535920001518,Double-click <left_click> title to rollup into the title bar.,
 302535920000001,"F2 to toggle Cheats Menu (Ctrl-F2 for Cheats Pane), and F9 to clear console log text.
 If this isn't a new install, then see Menu>Help>ECM>Changelog and search for ""To import your old settings"".",
+302535920000222,Oh look ECM hit the itty bitty limit of const.MaxModDataSize. Who'd a thunk it? Eh' Mortimer.,
+302535920000739,Black,
+302535920000740,Asian,
+302535920001283,Indian,
+302535920001284,Hispanic,
+302535920000006,Failed to save settings to <color 255 150 150>%s</color>: <color 255 255 100>%s</color>,
+302535920000243,Problem saving settings! Error: <color 255 150 150>%s</color>,
+302535920000007,Problem loading settings! Error: <color 255 150 150>%s</color>,
+302535920000008,"Error: Couldn't convert old settings to new settings: <color 255 150 150>%s</color>",
+302535920000009,Missing Scenario Name,
+302535920000010,Missing Name,
+302535920000011,Missing Description,
+302535920001174,Show an example .mtl file for this material (not complete).,
+302535920001177,Generate .mtl,
 302535920001069,Toggle Boolean,
 302535920000497,Hook Started,
 302535920000498,Hook Stopped,
@@ -107,18 +137,6 @@ The func I use for spot_rot rounds to two decimal points... (let me know if you 
 302535920000793,History,
 302535920000881,"Place .lua files in <color 100 255 100>%s</color> to have them show up in the ""Scripts"" list, you can then use the list to execute them (you can also create folders for sorting).",
 302535920000888,Any .lua files in here will be part of a list that you can execute in-game from the console menu.,
-302535920000222,Oh look ECM hit the itty bitty limit of const.MaxModDataSize. Who'd a thunk it? Eh' Mortimer.,
-302535920000739,Black,
-302535920000740,Asian,
-302535920001283,Indian,
-302535920001284,Hispanic,
-302535920000006,Failed to save settings to <color 255 150 150>%s</color>: <color 255 255 100>%s</color>,
-302535920000243,Problem saving settings! Error: <color 255 150 150>%s</color>,
-302535920000007,Problem loading settings! Error: <color 255 150 150>%s</color>,
-302535920000008,"Error: Couldn't convert old settings to new settings: <color 255 150 150>%s</color>",
-302535920000009,Missing Scenario Name,
-302535920000010,Missing Name,
-302535920000011,Missing Description,
 302535920001297,Toggle Flight Grid,
 302535920001298,Shows a square grid with terrain/objects shape.,
 302535920001267,<color 255 150 150>%s</color> at position: <color 255 255 100>%s</color> was stopped.,
@@ -144,7 +162,7 @@ You can copy and paste numbers if you want.",
 302535920000029,Error: Cannot find any <color 255 150 150>%s</color>.,
 302535920000032,Select a resource to find,
 302535920001441,<left_click> Activate <right_click> Add/Remove Quickbar,
-302535920001439,"~obj, @func, @@type, $id, %img, *r/*g/*m threads. Hover mouse for more info.",
+302535920001439,"~obj, @func, @@type, $id, %img, ^str, *r/*g/*m threads. Hover mouse for more info.",
 302535920001440,"<color 100 255 100>~</color><color 255 255 100>obj</color> opens object in examine dlg, use <color 255 150 150>ex(obj)</color> in lua code.
 <color 100 255 100>~~</color><color 255 255 100>obj</color> opens object's attachments in examine dlg.
 
@@ -154,7 +172,9 @@ You can copy and paste numbers if you want.",
 
 <color 100 255 100>@@</color><color 255 255 100>EntityData</color> prints type of obj, use <color 255 150 150>type(obj)</color> in lua code.
 
-<color 100 255 100>%</color><color 255 255 100>""UI/Vignette.tga""</color> opens image in image viewer, use <color 255 150 150>imageview(img)</color> in lua code.
+<color 100 255 100>%</color><color 255 255 100>""UI/Vignette.tga""</color> opens image in image viewer, use <color 255 150 150>imgview(image)</color> in lua code.
+
+<color 100 255 100>^</color><color 255 255 100>""text string""</color> opens text in text editor, use <color 255 150 150>txtview(string)</color> in lua code.
 
 <color 100 255 100>$</color><color 255 255 100>123</color> or <color 100 255 100>$</color><color 255 255 100>EffectDeposit.display_name</color> prints translated string, use <color 255 150 150>trans(obj)</color> in lua code.
 
@@ -279,6 +299,7 @@ https://www.lua.org/manual/5.3/manual.html#pdf-debug.sethook",
 302535920000870,Shows mod log msgs in an examine dialog.,
 302535920000692,Log is blank (well not anymore).,
 302535920000477,Clear out the windowed console log.,
+302535920001461,XText:ParseText() just ralphed.,
 302535920001124,Will take a few seconds to complete.,
 302535920000461,Position,
 302535920000885,Unpacked,
@@ -777,7 +798,6 @@ Activated when colonist changes job.",
 302535920000736,"%s: Whoops somebody broke the rocket, guess you're stuck on mars.",
 302535920000737,%s: Water? Like out of the toilet?,
 302535920000738,Evil Overlord,
-302535920000741,Race,
 302535920000742,"Congratulations! You've been awarded the Childkiller title.
 
 
@@ -988,6 +1008,7 @@ Works after colonist idle.",
 Not permanent.",
 302535920000447,Change the age at which colonists die (applies to newly arrived and born colonists as well).,
 302535920000448,"I'm afraid it could be 9/11 times 1,000.",
+302535920001198,Show a list of terrain textures used in current map.,
 302535920001136,Test a CSV for malformed strings (can cause freezing when loaded normally).,
 302535920001137,CSV Path,
 302535920001155,"Enter the path to the CSV file you want to test (defaults to mine as an example).
@@ -1001,7 +1022,7 @@ Try to increase or decrease the number if not enough or too many errors show up.
 For the value enter either ""true"" (to use 5) or a number.
 
 You need my HelperMod installed to be able to use this.",
-302535920001547,List Visible Objects,
+302535920001547,Visible Objects,
 302535920001548,Shows list of objects rendered in the current frame.,
 302535920001527,Building Path Markers,
 302535920001528,Show inside waypoints colonists take to move around (not all buildings).,
@@ -1043,9 +1064,6 @@ You need my HelperMod installed to be able to use this.",
 302535920000467,Path Markers,
 302535920001175,Debug FX,
 302535920000453,Reload Lua,
-302535920001222,Age,
-302535920001229,Last Meal,
-302535920001235,Last Rest,
 302535920001163,"Flatten height has been choosen <color 100 255 100>%s</color>, press shortcut again to update buildable.",
 302535920001164,"Flattening has been stopped, now updating buildable.",
 302535920000851,"isn't an object?
@@ -1379,9 +1397,11 @@ Takes less then a second on a map with 3616 buildings and 54 drone hubs.",
 302535920000620,If any colonists are black cubes click this.,
 302535920000621,Align All Buildings To Hex Grid,
 302535920000622,If you have any buildings that aren't aligned to the hex grids use this.,
-302535920001504,Named,
-302535920001505,°,
-302535920001503,Map Name,
+302535920000973,"Change the value (-1) to an index number from Terrain Textures.
+Open %s to see all the textures, the tooltips show the texture index.",
+302535920001237,Terrain Type Remap,
+302535920001312,"Instead of replacing all textures with one then re-adding stuff, this will remap existing textures.",
+302535920001313,Amount used on map: %s,
 302535920001501,Map Data,
 302535920001502,"Export map location data to <color 100 255 100>%sMapData.csv</color> (will take awhile).
 
@@ -1392,17 +1412,11 @@ Difficulty Challenge/Named Location may not work on some saves (best to start a 
 302535920001490,Removes pushback limit at the edge of the map.,
 302535920001487,Reload Map,
 302535920001488,Reloads map as new game.,
-302535920001454,Stockpiled,
-302535920001455,Produced,
-302535920001456,Consumed,
-302535920001457,Stored,
-302535920001453,Completed,
 302535920001208,Colonist Data,
 302535920001219,Export colonist data to <color 100 255 100>%sColonists.csv</color>.,
 302535920001449,Export,
 302535920001450,Graphs Data,
 302535920001452,Export command centre graph data to %sGraphs.csv.,
-302535920001448,CSV,
 302535920000862,Object Planner,
 302535920000863,Places fake construction site objects at mouse cursor (collision disabled).,
 302535920001375,Bird's Eye,
@@ -1433,7 +1447,6 @@ Difficulty Challenge/Named Location may not work on some saves (best to start a 
 302535920000803,For rules separate with spaces: Hunger ColonyPrefab (or leave blank for none).,
 302535920000110,Min,
 302535920000941,Max,
-302535920000973,Change Terrain Texture,
 302535920000974,Map default: <color 100 255 100>%s</color>,
 302535920000975,Custom Lightmodel,
 302535920000976,"Use double right click to test without closing dialog
@@ -1515,7 +1528,7 @@ And yes Medium is using a higher setting than High...",
 302535920001065,Menu Option,
 302535920001206,Change how many Sols between autosaving.,
 302535920000845,Render,
-302535920000623,Change Terrain Type,
+302535920000623,Terrain Type Change,
 302535920000624,"Green or Icy mars? Coming right up!
 (don't forget a light model)",
 302535920000625,Change Light Model,
