Expanded Cheat Menu:
### Changed:
- Debug>Force Story Bits shows full list instead of just "actively waiting" ones.
- Examine:
- > Added Toolbar>Toggle Objlist: Toggle setting the metatable for this table to an objlist (for using mark/delete all).

### Fixed:
- Debug>Force Story Bits works properly now.
- Examine>Tools>Functions failed on some objects.

RC Garage v0.4:
Missing Rovers story fix.

ExpandedCheatMenu@choggi.org

--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -297,6 +297,8 @@ https://www.lua.org/manual/5.3/manual.html#pdf-debug.sethook",
 302535920000870,Shows mod log msgs in an examine dialog.,
 302535920000692,Log is blank (well not anymore).,
 302535920000477,Clear out the windowed console log.,
+302535920001558,Toggle Objlist,
+302535920001559,Toggle setting the metatable for this table to an objlist (for using mark/delete all).,
 302535920001512,Mark All Objects (Line),
 302535920001513,Add a line connecting all items in list.,
 302535920001461,XText:ParseText() just ralphed.,
